<resources>
    <string name="app_name">Gradulator</string>
    <string name="target_grade_string">Target Grade</string>
    <string name="set_target_grade_string">Set Target Grade</string>
    <string name="current_grade_string">Current Grade</string>


    <string name="needed_grade">Grade Needed</string>
    <string name="achieved_grade">Grade Achieved</string>
    <string name="percent_symbol">%</string>

    <string name="add_course">Add Course</string>
    <string name="course_title">Course Title</string>
    <string name="course_name_hint">Enter Course Name</string>

    <string name="create_course">Create Course</string>
    <string name="cancel">Cancel</string>
    <string name="enter_course_name_prompt">Please Enter Course Title</string>
    <string name="set_target_grade">Please Enter Your Target Grade for the Course</string>
    <string name="valid_target_grade">Please Enter a Target Grade between 1 and 100</string>

    <string name="grades_recieved">No Grades Recieved</string>

    <string name="new_syllabus_item">New Syllabus Item</string>
    <string name="syllabus_item_name">Syllabus Item Name</string>
    <string name="syllabus_item_weight">Weight Towards Final Grade</string>
    <string name="course_total_weight">Total Accumalted Course Weight</string>
    <string name="course_total_weight_value">0%</string>
    <string name="syllabus_item_name_toast">Please Enter a Name for the Syllabus Item</string>
    <string name="syllabus_item_weight_toast">Please Enter the Weight for the Syllabus Item</string>

    <string name="add_syllabus_item">Add Syllabus Item</string>

    <string name="remove">Remove from Course List</string>
    <string name="remove_warning">You will lose all of this course\'s information</string>
    <string name="cannot_undo">This process cannot be undone</string>


    <string name="change_course_name">Edit Course Name</string>

</resources>
