<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <EditText
        android:id="@+id/syllabus_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:maxLength="20"
        android:hint="@string/syllabus_item_name"
        android:inputType="text"
        android:imeOptions="actionNext"/>

    <EditText
        android:id="@+id/syllabus_item_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/syllabus_item_weight"
        android:maxLength="4"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:digits="0123456789."/>

    <TextView
        android:id="@+id/course_total_weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/course_total_weight" />

    <TextView
        android:id="@+id/course_total_weight_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:textSize="14pt"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/course_total_weight_value"/>

</LinearLayout>